# merica-coin

./: CODEOWNERS  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile.am  Makefile.in  README.md  SECURITY.md  aclocal.m4  configure  configure.ac  libmericaconsensus.pc.in
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  merica.sln  merica_config.h  msvc-autogen.py  vcpkg.json
contrib/: README.md  gitian-build.py  install_db4.sh  merica-cli.bash-completion  merica-qt.pro  merica-tx.bash-completion  mericad.bash-completion  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  merica-conf.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  Makefile.in  merica-cli.1  merica-qt.1  merica-tx.1  merica-wallet.1  mericad.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  fs.h  (+114 more)
(+732 files in other folders)
