dist_man1_MANS=

if BUILD_MERICAD
  dist_man1_MANS+=mericad.1
endif

if ENABLE_QT
  dist_man1_MANS+=merica-qt.1
endif

if BUILD_MERICA_CLI
  dist_man1_MANS+=merica-cli.1
endif

if BUILD_MERICA_TX
  dist_man1_MANS+=merica-tx.1
endif

if ENABLE_WALLET
if BUILD_MERICA_WALLET
  dist_man1_MANS+=merica-wallet.1
endif
endif
